Minor improvements of unit test code
This removes a couple of disabled unit tests and applies IDE suggested improvements on code and spelling. Nothing major.